--- a/src/app/pages/automato/shell/automato/automato.component.html
+++ b/src/app/pages/automato/shell/automato/automato.component.html
@@ -32,6 +32,9 @@
           <ng-template matStepContent>
 
             <div class="my-4">
+              <span class="d-block mb-4 text-muted">
+                Senha do cartão: {{data.password}}
+              </span>
               <div  class="d-flex flex-column justify-content-start align-items-start">
                 <mat-form-field appearance="outline">
                   <mat-label>Senha do cartão</mat-label>
@@ -83,8 +86,8 @@
   } @else {
     <section class="d-flex flex-column justify-content-center align-items-center">
       <img class="w-50" src="assets/done.svg" alt="Operação finalizada">
-      <b class="d-block my-3">Operação concluida!</b>
-      <button mat-flat-button color="primary" (click)="onReset()">Iniciar nova sessão</button>
+
+      <button mat-flat-button class="my-3" color="primary" (click)="onReset()">Iniciar sessão</button>
     </section>
   }
 
