--- a/src/app/pages/automato/components/state/state.component.html
+++ b/src/app/pages/automato/components/state/state.component.html
@@ -8,7 +8,7 @@
            <img *ngIf="state.status === 'ERROR'" src="assets/arrow-error.png">
          </div>
          <span>
-           {{ state.arrow }}
+          δ(q{{ state.id -1 }}, E{{ state.id }}) = q{{ state.id }}
          </span>
       </div>
      }
